--- a/bower.json
+++ b/bower.json
@@ -2,14 +2,14 @@
   "name": "senior-test",
   "version": "0.0.0",
   "dependencies": {
-    "jquery": "~1.10.2",
+    "jquery": "~2.1.4",
     "requirejs": "~2.1.9",
     "requirejs-text": "~2.0.10",
-    "underscore": "~1.5.2",
-    "backbone": "~1.1.0",
-    "modernizr": "~2.6.2",
-    "layoutmanager": "~0.9.5",
-    "highcharts-release": "~4.0.4"
+    "highcharts-release": "~4.1.9",
+    "angular": "~1.5.0-beta.2",
+    "angular-route": "~1.4.0",
+    "requirejs-domready": "~2.0.1",
+    "text": "requirejs-text#~2.0.14"
   },
   "devDependencies": {}
 }
